# sxs-manifest

./: .gitignore  Cargo.toml  README.md
src/: consts.rs  debug.rs  lib.rs  manifest.schema.xml  serialize.rs
src/manifest/: common.rs  compatibility.rs  dependency.rs  mod.rs
src/tests/: empty.xml  max_version_tested.xml  supported_os_single.xml
